# wenfox

./: .editorconfig  .gitignore  .prettierrc.cjs  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: release.yml
app/manage/: package.json  vite.config.ts
app/manage/src/stores/: api.ts
app/manager/: README.md  package.json  vite.config.ts
app/manager/src/stores/: api.ts
app/manager/src/views/: HomeView.vue
app/webui/: package.json  vite.config.js
app/webui/src/: App.vue
crates/cli/: cargo.toml
crates/server/: Cargo.toml
libs/configs/: Cargo.toml
libs/configs/configs/: mod.rs
libs/locale/: Cargo.toml
libs/plugins/: Cargo.toml
libs/quest/: Cargo.toml
libs/quest/quest/: mod.rs
libs/server/: Cargo.toml
libs/server/server/: mod.rs
libs/server/src/: lib.rs
main/: Cargo.toml
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/web/webui/: index.html
src-tauri/resources/web/webui/assets/: index-BRb80wVC.js  index-CkUDcht1.css
src-tauri/src/: app.rs  constant.rs  main.rs
src-tauri/src/app/: mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/server/: mod.rs
