[package]
authors = ["suyufox"]
description = "✨ 文狐の小工具库 | A collection of tools for Wenhu"
edition = "2021"
license = 'MIT'
name = "wenfox"
repository = "https://github.com/suyufox/wenfox"
rust-version = "1.77.2"
version = "0.1.0"

[build-dependencies]
chrono = "0.4.40"
tauri-build = {version = "2.0.5", features = []}

[dependencies]
chrono = {workspace = true}
colored = {workspace = true}
lazy_static = {workspace = true}
log = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
serde_yaml = {workspace = true}
tauri = {version = "2.3.1", features = []}
tauri-plugin-fs = "2.2.0"
tauri-plugin-log = "2.2.3"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tokio = {workspace = true, features = ["rt-multi-thread", "macros", "sync"]}
toml = {workspace = true}
uuid = {workspace = true}

# 子包
wenfox-server = {path = "../crates/server"}

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"
